crates/rustereum/tests/ui/fn_param.stderr
error: rustereum: function parameters are not supported in v1
  --> tests/ui/fn_param.rs:10:27
   |
10 |     pub fn set(&mut self, x: u256) {
   |                           ^^^^^^^
